compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case_int_tuple_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 479
expression: "case 1 { x if x == #() -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ case 1 { x if x == #() -> 1 }
  │               ^^^^^^^^

Expected type:

    Int

Found type:

    #()


